# polars

api/python/dev/: genindex.html  objects.inv  searchindex.js
api/python/dev/reference/: api.html  config.html  datatypes.html  exceptions.html  functions.html  index.html  io.html  metadata.html  plugins.html  selectors.html  testing.html
api/python/dev/reference/api/: polars.Config.load.html  polars.Config.load_from_file.html  polars.Config.restore_defaults.html  polars.Config.save.html  polars.Config.save_to_file.html  polars.Config.set_ascii_tables.html  polars.Config.set_auto_structify.html  polars.Config.set_decimal_separator.html  polars.Config.set_float_precision.html  polars.Config.set_fmt_float.html  polars.Config.set_fmt_str_lengths.html  polars.Config.set_fmt_table_cell_list_len.html  polars.Config.set_streaming_chunk_size.html  polars.Config.set_tbl_cell_alignment.html  polars.Config.set_tbl_cell_numeric_alignment.html  polars.Config.set_tbl_cols.html  polars.Config.set_tbl_column_data_type_inline.html  polars.Config.set_tbl_dataframe_shape_below.html  polars.Config.set_tbl_formatting.html  polars.Config.set_tbl_hide_column_data_types.html  polars.Config.state.html  (+145 more)
crates/polars-arrow/src/: storage.rs
crates/polars-arrow/src/bitmap/: iterator.rs
crates/polars-compute/src/comparisons/: array.rs  mod.rs  offsets.rs  struct_.rs
crates/polars-fuzz/: Cargo.toml
crates/polars-fuzz/src/: bitset.rs  exprs.rs  lib.rs  select_modulo.rs
crates/polars-fuzz/src/dsl/: mod.rs
py-polars/polars/datatypes/: classes.py
py-polars/tests/unit/io/: test_parquet.py
(+1107 files in other folders)
